--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,38 @@
+/* font-face */
+
+/* poppins-300 - latin */
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/poppins-v21-latin-300.woff2') format('woff2');
+  }
+  /* poppins-regular - latin */
+  @font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins-v21-latin-regular.woff2') format('woff2');
+  }
+  /* poppins-600 - latin */
+  @font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/poppins-v21-latin-600.woff2') format('woff2');
+  }
+  /* poppins-900 - latin */
+  @font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 900;
+    src: url('../fonts/poppins-v21-latin-900.woff2') format('woff2');
+  }
+
 /* Css-змінна */
 :root {
     --color-primery-dark: #31261A;
@@ -9,6 +44,14 @@
 /* Global Styles */
 body {
     color: var(--color-primery-dark);
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+.address {
+    font-style: normal;
 }
 
 ul {
@@ -22,9 +65,8 @@ ul {
     border: 2px solid var(--color-brand-light);
     border-radius: 8px;
     cursor: pointer;
+    font-weight: 600;
 
-    width: 238px;
-    height: 59px;
 }
 
 .button:hover {
@@ -35,15 +77,21 @@ ul {
 /* Link */
 .link {
     color: var(--color-primery-light);
+    text-decoration: none;
+    
 }
 
 .link:hover {
     color: var(--color-brand-light);
+    font-weight: 600;
 }
 
 /* Hero section */
 .hero-title {
     color: var(--color-primery-light); /* HEX value */
+    text-align: center;
+    font-size: 128px;
+    font-weight: 900;
 }
 
 .hero-title .accent{
@@ -56,6 +104,63 @@ ul {
     background-color: var(--color-brand-light);
 }
 
+.advantagest-item {
+    font-size: 20px;
+    font-weight: 300;
+
+}
+
+.section-title {
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+}
+
 .section-title .accent{
     color:  var(--color-brand-dark);
+}
+
+/* Traditions Section */
+.tradition-text .brand {
+    color:var(--color-brand-light);
+    font-weight: 600;
+}
+
+.tradition-text .uppercase {
+    text-transform: uppercase;
+}
+
+/* Chef section */
+.Chef-title {
+    font-size: 40px;
+    font-weight: 600;
+}
+
+/* Formats section */
+
+.format-title {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.format-text {
+    font-size: 14px;
+    font-weight: 300;
+}
+
+/* Footer section */
+
+.address-link {
+    color: var(--color-primery-light);
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+}
+
+.address-link:hover {
+    color: var(--color-brand-light);
+}
+
+.address-copyright {
+    font-size: 14px;
 }
