--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 @font-face {
     font-display: swap;
     font-family: 'Poppins';
-    font-style: normal;
+    /* font-style: normal; зайве видаляємо */
     font-weight: 300;
     src: url('../fonts/poppins-v21-latin-300.woff2') format('woff2');
   }
@@ -12,7 +12,6 @@
   @font-face {
     font-display: swap;
     font-family: 'Poppins';
-    font-style: normal;
     font-weight: 400;
     src: url('../fonts/poppins-v21-latin-regular.woff2') format('woff2');
   }
@@ -20,7 +19,6 @@
   @font-face {
     font-display: swap;
     font-family: 'Poppins';
-    font-style: normal;
     font-weight: 600;
     src: url('../fonts/poppins-v21-latin-600.woff2') format('woff2');
   }
@@ -28,7 +26,6 @@
   @font-face {
     font-display: swap;
     font-family: 'Poppins';
-    font-style: normal;
     font-weight: 900;
     src: url('../fonts/poppins-v21-latin-900.woff2') format('woff2');
   }
