--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,11 @@ body {
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin-top: 0;
 }
 
 .address {
@@ -59,15 +64,35 @@ ul {
     list-style-type: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
+.section {
+    padding: 48px 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 1288px;
+    margin: 0 auto;
+    padding: 0 24px;
+}
+
 /* Button */
 .button {
+    padding: 16px 32px;
     color: var(--color-primery-light);
     background-color: var(--color-brand-light);
     border: 2px solid var(--color-brand-light);
     border-radius: 8px;
     cursor: pointer;
     font-weight: 600;
-
 }
 
 .button:hover {
@@ -88,7 +113,13 @@ ul {
 }
 
 /* Hero section */
+
+.hero-section {
+    padding: 272px 0;
+}
+
 .hero-title {
+    margin-bottom: 0;
     color: var(--color-primery-light); /* HEX value */
     text-align: center;
     font-size: 128px;
@@ -122,6 +153,15 @@ ul {
 }
 
 /* Traditions Section */
+
+.tradition-section {
+    padding-top: 96px;
+}
+
+.tradition-title {
+    margin-bottom: 42px;
+}
+
 .tradition-text .brand {
     color:var(--color-brand-light);
     font-weight: 600;
@@ -132,12 +172,24 @@ ul {
 }
 
 /* Chef section */
-.Chef-title {
+
+.chefs-title{
+    margin-bottom: 80px;
+}
+
+.chef-title {
+    margin-bottom: 16px; /* марджини краще задавати перед розмірами ріфту*/
     font-size: 40px;
     font-weight: 600;
+    
 }
 
 /* Formats section */
+
+.formats-title {
+    margin-bottom: 80px;
+
+}
 
 .format-title {
     font-size: 24px;
@@ -147,6 +199,12 @@ ul {
 .format-text {
     font-size: 14px;
     font-weight: 300;
+}
+
+/* Contact section */
+
+.contact-title {
+    margin-bottom: 16px;
 }
 
 /* Footer section */
