--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,12 @@ ul {
 
 .hero-section {
     padding: 272px 0;
+    background-image: url(../images/bgImgHedr.jpg);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
+    /* background-attachment: fixed; */
+    /* background: url(../images/bgImgHedr.jpg) no-repeat center/top cover; */
 }
 
 .hero-title {
@@ -243,6 +249,7 @@ ul {
 .format-card {
     border: 2px solid gray;
     border-radius: 16px;
+    /* background-image: url(../images/firstImg.jpg); */
     padding: 24px;
 }
 
@@ -288,4 +295,12 @@ ul {
 
 .address-copyright {
     font-size: 14px;
+}
+
+.footer {
+    background-image: url(../images/footerBg.png);
+    background-color: var(--color-primery-dark);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
