--- a/css/secondTest.css
+++ b/css/secondTest.css
@@ -33,7 +33,7 @@
 }
 
 .item:nth-child(3) {
-    flex-grow: 2; /* буде у два рази більшим ніж елемент 2 */
+    flex-grow: 2; буде у два рази більшим ніж елемент 2
 } */
 
 /* .item:nth-child(2) {
@@ -45,3 +45,37 @@
     width: 80px;
     height: 80px;
 } */
+
+/* Gradient */
+
+.testBlock {
+    width: 300px;
+    height: 400px;
+    border: 2px solid black;
+    margin: 20px auto;
+    background-image: linear-gradient(gold, green ,blue);
+}
+
+.test {
+    width: 300px;
+    height: 400px;
+    border: 2px solid black;
+    margin: 20px auto;
+    background-image: linear-gradient(45deg, gold 50%, green 50%, green 70%,blue 70%, blue 100%);
+}
+
+.radial {
+    width: 300px;
+    height: 400px;
+    border: 2px solid black;
+    margin: 20px auto;
+    background-image: radial-gradient(gold, green ,blue);
+}
+
+.radialTwo {
+    width: 300px;
+    height: 400px;
+    border: 2px solid black;
+    margin: 20px auto;
+    background-image: radial-gradient(gold 50%, green 50%, green 70%,blue 70%, blue 100%);
+}
