--- a/css/styles.css
+++ b/css/styles.css
@@ -247,10 +247,15 @@ ul {
 }
 
 .format-card {
+    height: 444px;
     border: 2px solid gray;
     border-radius: 16px;
-    /* background-image: url(../images/firstImg.jpg); */
     padding: 24px;
+    background: linear-gradient(180deg,
+     rgba(49, 38, 26, 0) 55.21%,
+     rgba(49, 38, 26, 0.71) 72.92%,
+       var(--color-primery-dark) 100%);
+    /* box-shadow: 10px 10px 10px 5px green, 25px 22px 30px 2px rgb(192, 23, 177); */
 }
 
 .formats-list {
