--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,9 @@
     --color-primery-light: #faf4ea;
     --color-brand-light: #819B57;
     --color-brand-dark: #465929;
+    --color-decoreite: #CFCFBC;
+    --color-secondary-dark: #A18268;
+
 }
 
 /* Global Styles */
@@ -45,6 +48,7 @@
 
 body {
     color: var(--color-primery-dark);
+    background-color: var(--color-primery-light);
     font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -89,7 +93,7 @@ ul {
 /* Header section */
 
 .heder {
-    background-color: #ccc;
+    background-color: #ccc; /* видалити*/
 }
 
 .header-container {
@@ -190,6 +194,10 @@ ul {
     line-height: 1.3;
 }
 
+.section-title.centered {
+    text-align: center;
+}
+
 .section-title .accent{
     color:  var(--color-brand-dark);
 }
@@ -229,8 +237,26 @@ ul {
 
 /* Chef section */
 
-.chefs-title{
-    margin-bottom: 80px;
+.chefs-title {
+    max-width: 535px;
+    margin: 0 auto 80px;
+}
+
+
+.chefs-title::before,
+.chefs-title::after {
+    display: block;
+    width: 352px;
+    border: 2px solid var(--color-decoreite);
+    content: '';
+}
+
+.chef-foto {
+    border-radius: 4px 4px 4px 200px;
+    box-shadow: 
+        -16px 16px 0 0 var(--color-primery-light),
+         -16px 16px 0 2px var(--color-secondary-dark);
+
 }
 
 .chef-title {
@@ -255,7 +281,6 @@ ul {
      rgba(49, 38, 26, 0) 55.21%,
      rgba(49, 38, 26, 0.71) 72.92%,
        var(--color-primery-dark) 100%);
-    /* box-shadow: 10px 10px 10px 5px green, 25px 22px 30px 2px rgb(192, 23, 177); */
 }
 
 .formats-list {
