--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,6 @@ ul {
     box-shadow: 
         -16px 16px 0 0 var(--color-primery-light),
          -16px 16px 0 2px var(--color-secondary-dark);
-
 }
 
 .chef-title {
@@ -267,6 +266,12 @@ ul {
 }
 
 /* Formats section */
+
+.formats-list {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
 
 .formats-item {
     flex-basis: calc((100% - 40px) / 3);
@@ -283,12 +288,6 @@ ul {
        var(--color-primery-dark) 100%);
 }
 
-.formats-list {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-}
-
 .formats-title {
     margin-bottom: 80px;
 
@@ -302,6 +301,27 @@ ul {
 .format-text {
     font-size: 14px;
     font-weight: 300;
+}
+
+/* Carousel */
+
+.carousel-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    fill: var(--color-primery-dark);
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid var(--color-primery-dark);
+    cursor: pointer;
+}
+
+.carousel-button:hover {
+    background-color: var(--color-primery-dark);
+    fill: var(--color-primery-light);
 }
 
 /* Contact section */
@@ -323,8 +343,17 @@ ul {
     color: var(--color-brand-light);
 }
 
+.adress-icon {
+    fill: var(--color-primery-light);
+}
+
+.adress-icon:hover {
+    fill: var(--color-brand-light);
+}
+
 .address-copyright {
     font-size: 14px;
+    color: #A18268;
 }
 
 .footer {
