--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,9 @@
 }
 
 /* Global Styles */
-* {
+*,
+*::after,
+*::before {
     box-sizing: border-box;
 }
 
@@ -58,6 +60,10 @@ body {
 
 h1, h2, h3, h4, h5, h6, p {
     margin-top: 0;
+}
+
+a {
+    display: inline-block;
 }
 
 .address {
@@ -190,7 +196,7 @@ ul {
 
 .section-title {
     font-size: 64px;
-    font-weight: 900;
+    font-weight: 750; /* ЗМIНИЛА САМА з 900 на 750*/
     line-height: 1.3;
 }
 
@@ -251,6 +257,20 @@ ul {
     content: '';
 }
 
+.chefs-list {
+    display: flex;
+    gap: 40px 30px;
+    flex-wrap: wrap;
+}
+.chefs-item {
+    flex-basis: calc((100% - 30px) / 2);
+}
+
+.chef-card {
+    display: flex;
+    gap: 30px;
+}
+
 .chef-foto {
     border-radius: 4px 4px 4px 200px;
     box-shadow: 
@@ -262,10 +282,23 @@ ul {
     margin-bottom: 16px; /* марджини краще задавати перед розмірами ріфту*/
     font-size: 40px;
     font-weight: 600;
-    
+}
+
+.chef-text p {
+    margin-bottom: 24px;
+}
+
+.chef-text p:last-child {
+    margin-bottom: 0;
 }
 
 /* Formats section */
+
+.formats-container {
+    display: flex;
+    gap: 32px;
+    align-items: center;
+}
 
 .formats-list {
     display: flex;
@@ -317,6 +350,7 @@ ul {
     border-radius: 50%;
     border: 1px solid var(--color-primery-dark);
     cursor: pointer;
+    flex-shrink: 0;
 }
 
 .carousel-button:hover {
@@ -326,11 +360,52 @@ ul {
 
 /* Contact section */
 
+.contact-section {
+    padding-bottom: 96px;
+}
+
+.contact-container {
+    display: flex;
+    gap: 32px;
+}
+
 .contact-title {
     margin-bottom: 16px;
 }
 
+.contact-map {
+    flex-shrink: 0;
+    border: none;
+    border-radius: 16px;
+}
+
 /* Footer section */
+
+.footer {
+    padding: 32px 0;
+}
+
+.footer-container {
+    display: flex;
+    gap: 20px;
+}
+
+.footer-nav,
+.footer-address {
+    display: flex;
+    flex-basis: 50%;
+    gap: 20px;
+}
+
+.footer-logo,
+.footer-menu {
+    flex-grow: 1;
+}
+
+.address-list,
+.address-info {
+    flex-grow: 1;
+}
 
 .address-link {
     color: var(--color-primery-light);
