--- a/css/styles.css
+++ b/css/styles.css
@@ -244,17 +244,27 @@ ul {
 /* Chef section */
 
 .chefs-title {
-    max-width: 535px;
+    position: relative;
+    /* max-width: 535px; */
     margin: 0 auto 80px;
 }
 
 
 .chefs-title::before,
 .chefs-title::after {
-    display: block;
+    position: absolute;
+    bottom: 24px;
     width: 352px;
     border: 2px solid var(--color-decoreite);
     content: '';
+}
+
+.chefs-title::before {
+    left: 0;
+}
+
+.chefs-title::after {
+    right: 0;
 }
 
 .chefs-list {
@@ -383,6 +393,34 @@ ul {
 
 .footer {
     padding: 32px 0;
+    position: relative;
+    background-image: url(../images/footerBg.png);
+    background-color: var(--color-primery-dark);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.footer::before,
+.footer::after {
+    position: absolute;
+    bottom: 0;
+    background-repeat: no-repeat;
+    content: '';
+}
+
+.footer::before {
+    left: 0;
+    width: 180px;
+    height: 120px;
+    background-image: url(../images/breadLeft.png);
+}
+
+.footer::after {
+    right: 0;
+    width: 380px;
+    height: 190px;
+    background-image: url(../images/breadRight.png);
 }
 
 .footer-container {
@@ -431,10 +469,41 @@ ul {
     color: #A18268;
 }
 
-.footer {
-    background-image: url(../images/footerBg.png);
-    background-color: var(--color-primery-dark);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+
+/* Modal window */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0, 0, 0, 0.5);
+}
+
+.backdrop.is-hidden {
+    /* display: none; */
+    /* ховаемо вікно */
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal {
+    position: relative;
+    top: 50px;
+    width: 580px;
+    height: 580px;
+    background-color: var(--color-primery-light);
+    border-radius: 32px;
+}
+
+
+.modal-btn-close {
+    position: absolute;
+    top: 40px;
+    right: 40px;
 }
