--- a/css/styles.css
+++ b/css/styles.css
@@ -469,8 +469,6 @@ ul {
     color: #A18268;
 }
 
-<<<<<<< HEAD
-
 /* Modal window */
 
 .backdrop {
@@ -507,7 +505,8 @@ ul {
     position: absolute;
     top: 40px;
     right: 40px;
-=======
+}
+
 .footer {
     background-image: url(../images/footerBg.png);
     background-color: var(--color-primery-dark);
@@ -526,5 +525,4 @@ ul {
     position: absolute;
     background-image: url(../images/decor-bread-large.png);
     content: '';
->>>>>>> 1b76841ef86cbd7f439c9833d50353661e5f7cb5
 }
