--- a/css/secondTest.css
+++ b/css/secondTest.css
@@ -27,13 +27,39 @@
     /* transform: translate(10px, 50px); */
     /* transform: translateY(10px); */
     transform: translateX(-30px);
+    /* transition-property: background-color;
+    transition-duration: 2s; */
+    transition: background-color 1s, color 1s;
+    /* transition-timing-function: cubic-bezier(.1,.99,.87,.22);
+    transition-delay: 0.5s; */
+}
+
+.event.crimson:hover {
+    background-color: pink;
+    color: black;
+    
 }
 
 .event.chartreuse {
     width: 120px;
     height: 120px;
     background: chartreuse;
-    transform: rotate(45deg);
+    /* transform: rotate(45deg); */
+    animation-name: spin;
+    animation-duration: 1s;
+    animation-delay: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+    
 }
 
 .event.aqua {
