--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,11 @@ ul {
 /* Header section */
 
 .heder {
-    background-color: #ccc; /* видалити*/
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   padding-top: 32px;
 }
 
 .header-container {
@@ -143,7 +147,7 @@ ul {
 .link {
     color: var(--color-primery-light);
     text-decoration: none;
-    
+    transition: color 0.3s;
 }
 
 .link:hover {
@@ -155,13 +159,14 @@ ul {
 
 .hero-section {
     padding: 272px 0;
-    background-image: url(../images/bgImgHedr.jpg);
+    background-image: linear-gradient(102.76deg, rgba(18, 18, 17, 0.78) 2.03%, rgba(18, 18, 17, 0.6) 58.46%, rgba(18, 18, 17, 0) 90.36%),url(../images/bgImgHedr.jpg);
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
     /* background-attachment: fixed; */
     /* background: url(../images/bgImgHedr.jpg) no-repeat center/top cover; */
 }
+
 
 .hero-title {
     margin-bottom: 0;
@@ -329,6 +334,11 @@ ul {
      rgba(49, 38, 26, 0) 55.21%,
      rgba(49, 38, 26, 0.71) 72.92%,
        var(--color-primery-dark) 100%);
+    transition: transform 0.3s;
+}
+
+.format-card:hover {
+    transform: scale(1.05);
 }
 
 .formats-title {
@@ -366,6 +376,10 @@ ul {
 .carousel-button:hover {
     background-color: var(--color-primery-dark);
     fill: var(--color-primery-light);
+}
+
+.carousel-button.next {
+    transform: rotate(180deg);
 }
 
 /* Contact section */
@@ -480,7 +494,9 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px 0;
     background-color: rgb(0, 0, 0, 0.5);
+    transition: opacity 0.3s, visibility 0.3s;
 }
 
 .backdrop.is-hidden {
@@ -493,9 +509,10 @@ ul {
 
 .modal {
     position: relative;
-    top: 50px;
-    width: 580px;
-    height: 580px;
+    width: 100%;
+    max-width: 880px;
+    height: 100%;
+    max-height: 880px;
     background-color: var(--color-primery-light);
     border-radius: 32px;
 }
