--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,6 @@
     --color-brand-dark: #465929;
     --color-decoreite: #CFCFBC;
     --color-secondary-dark: #A18268;
-
 }
 
 /* Global Styles */
@@ -513,8 +512,10 @@ ul {
     max-width: 880px;
     height: 100%;
     max-height: 880px;
+    padding: 128px;
     background-color: var(--color-primery-light);
     border-radius: 32px;
+    overflow-y: auto;
 }
 
 
@@ -524,22 +525,40 @@ ul {
     right: 40px;
 }
 
-.footer {
-    background-image: url(../images/footerBg.png);
-    background-color: var(--color-primery-dark);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+/* Form */
+
+.form-field {
+    position: relative;
+    margin-bottom: 32px;
 }
 
-.footer::before {
+.form-label {
     position: absolute;
-    background-image: url(../images/decor-bread-small.png);
-    content: '';
+    top: 16px;
+    left: 42px;
+    font-size: 16px;
+    line-height: 1.17;
+    color: var(--color-secondary-dark);
+    transition: transform 0.3s;
 }
 
-.footer::after {
-    position: absolute;
-    background-image: url(../images/decor-bread-large.png);
-    content: '';
+.form-input:focus + .form-label {
+    transform: translate(-36px, -40px);
+}
+
+.form-input {
+    padding: 16px 42px;
+    width: 100%;
+    border: 1px solid var(--color-secondary-dark);
+    border-radius: 8px;
+    background-color: transparent;
+}
+
+.form-input:focus {
+    border-color: var(--color-brand-light);
+    outline: none;
+}
+
+.form-input::placeholder {
+    color: var(--color-secondary-dark);
 }
