--- a/css/styles.css
+++ b/css/styles.css
@@ -542,7 +542,7 @@ ul {
     transition: transform 0.3s;
 }
 
-.form-input:focus + .form-label {
+.form-field:focus-within .form-label {
     transform: translate(-36px, -40px);
 }
 
