--- a/css/styles.css
+++ b/css/styles.css
@@ -536,19 +536,21 @@ ul {
     position: absolute;
     top: 16px;
     left: 42px;
-    font-size: 16px;
+    /* font-size: 16px;
     line-height: 1.17;
     color: var(--color-secondary-dark);
-    transition: transform 0.3s;
+    transition: transform 0.3s; */
 }
 
-.form-field:focus-within .form-label {
+/* .form-field:focus-within .form-label {
     transform: translate(-36px, -40px);
-}
+} */
 
 .form-input {
     padding: 16px 42px;
     width: 100%;
+    font-size: 16px;
+    line-height: 1.17;
     border: 1px solid var(--color-secondary-dark);
     border-radius: 8px;
     background-color: transparent;
@@ -561,4 +563,30 @@ ul {
 
 .form-input::placeholder {
     color: var(--color-secondary-dark);
+    font-size: 16px;
+    line-height: 1.17;
+}
+
+.form-input:focus::placeholder{
+    color: var(--color-primery-dark);
+}
+
+.form-button {
+    display: block;
+    margin: 0 auto 24px;
+}
+
+.form-terms {
+    margin: 0 auto;
+    max-width: 210px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: center;
+}
+
+.form-terms-link {
+    color: var(--color-primery-dark);
+    text-underline-offset: 2px;
+
 }
