--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,12 @@ ul {
     background-color: transparent;
 }
 
+/* .button:disabled {
+    color: grey;
+    background-color: lightgray;
+    border-color: currentColor;
+    cursor: not-allowed;
+} */
 /* Link */
 .link {
     color: var(--color-primery-light);
@@ -559,6 +565,14 @@ ul {
 .form-input:focus {
     border-color: var(--color-brand-light);
     outline: none;
+}
+
+.form-input:disabled {
+    border-color: lightgray;
+}
+
+.form-input:disabled::placeholder {
+    color: lightgray;
 }
 
 .form-input::placeholder {
