--- a/css/styles.css
+++ b/css/styles.css
@@ -567,13 +567,13 @@ ul {
     outline: none;
 }
 
-.form-input:disabled {
+/* .form-input:disabled {
     border-color: lightgray;
 }
 
 .form-input:disabled::placeholder {
     color: lightgray;
-}
+} */
 
 .form-input::placeholder {
     color: var(--color-secondary-dark);
@@ -602,5 +602,33 @@ ul {
 .form-terms-link {
     color: var(--color-primery-dark);
     text-underline-offset: 2px;
+}
+
+.checkbox {
+    position: relative;
+}
+
+.checkbox-input {
+    appearance: none;
+}
+
+.checkbox-input:checked + .checkbox-label {
+    color:green;
+}
+
+.checkbox-label {
+    padding-left: 24px;
+}
+
+.checkbox-label::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 5px;
+    width: 16px;
+    height: 16px;
+    border: 1px solid var(--color-primery-dark);
+    border-radius: 2px;
+    content: '';
 
 }
