--- a/css/styles.css
+++ b/css/styles.css
@@ -612,8 +612,8 @@ ul {
     appearance: none;
 }
 
-.checkbox-input:checked + .checkbox-label {
-    color:green;
+.checkbox-input:checked + .checkbox-label::before {
+    background-color: lightgreen;
 }
 
 .checkbox-label {
