--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 a {
   display: inline-block;
+  color: var(--color-primery-dark);
 }
 
 .address {
@@ -30,15 +31,4 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-
-.section {
-    padding: 48px 0;
-}
-
-.container {
-    width: 100%;
-    max-width: 1288px;
-    margin: 0 auto;
-    padding: 0 24px;
 }
