--- a/scss/layouts/_hero_setction.scss
+++ b/scss/layouts/_hero_setction.scss
@@ -6,17 +6,12 @@
     background-size: cover;
     /* background-attachment: fixed; */
     /* background: url(../images/bgImgHedr.jpg) no-repeat center/top cover; */
-}
 
-
-.hero-title {
-    margin-bottom: 0;
-    color: var(--color-primery-light); /* HEX value */
-    text-align: center;
-    font-size: 128px;
-    font-weight: 900;
-}
-
-.hero-title .accent{
-    color:var(--color-brand-light);
+    &__title {
+        margin-bottom: 0;
+        color: var(--color-primery-light); /* HEX value */
+        text-align: center;
+        font-size: 128px;
+        font-weight: 900;
+    }
 }
