--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -10,15 +10,16 @@
     padding: 20px 0;
     background-color: rgb(0, 0, 0, 0.5);
     transition: opacity 0.3s, visibility 0.3s;
+    
+    &__is-hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
 }
 
-.backdrop.is-hidden {
-    /* display: none; */
-    /* ховаемо вікно */
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-}
+
+
 
 .modal {
     position: relative;
@@ -30,11 +31,21 @@
     background-color: var(--color-primery-light);
     border-radius: 32px;
     overflow-y: auto;
+
+    &__btn-close {
+        position: absolute;
+        top: 40px;
+        right: 40px;
+    }
+
+    &__form-field {
+        margin-bottom: 32px;
+    }
+
+    &__button {
+        display: block;
+        margin: 0 auto 24px;
+    }
 }
 
 
-.modal-btn-close {
-    position: absolute;
-    top: 40px;
-    right: 40px;
-}
