--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -10,16 +10,15 @@
     padding: 20px 0;
     background-color: rgb(0, 0, 0, 0.5);
     transition: opacity 0.3s, visibility 0.3s;
-    
-    &__is-hidden {
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
-    }
+ 
 }
 
-
-
+// не выдпрацьвуе у backdrop!!!
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
 
 .modal {
     position: relative;
